fix overlap

--- a/Lyra_UI/css/Lyra_UI.css
+++ b/Lyra_UI/css/Lyra_UI.css
@@ -4225,7 +4225,7 @@ header:has(.nav-pane:not(.hidden)) .navigation {
     background-color: var(--color-icon-bg) !important;
     width: 100%;
     height: 270px;
-    margin-bottom: -5.6em;
+    margin-bottom: -5em;
 }
 .side-panel .people-banner.no-image {
     margin-bottom: 0;
@@ -4283,7 +4283,7 @@ header:has(.nav-pane:not(.hidden)) .navigation {
 }
 .side-panel .social-media {
     gap: 30px;
-    margin: 10px 0 12px 0 !important;
+    margin: 10px 0 8px 0 !important;
 }
 .side-panel .social-media span {
     display: none;
